# ncradio-gui

./: CMakeLists.txt  README.md
backend/: audio.c  audio.h  config.c  config.h  eq.c  eq.h  radio.c  radio.h  rds.c  rds.h  record.c  record.h  record_flac.c  record_flac.h  record_mp3.c  record_mp3.h  record_ogg.c  record_ogg.h  record_wav.c  record_wav.h  resample.c  resample.h
qml/: Main.qml
qml/components/: AccentButton.qml  AppIcon.qml  EqBandSlider.qml  FreqDisplay.qml  GlassDialog.qml  GlassPanel.qml  IconButton.qml  MiniHeader.qml  ScanView.qml  SignalMeter.qml  StationListItem.qml  StatusBadge.qml  VolumeSlider.qml
qml/dialogs/: AboutDialog.qml  AlertDialog.qml  DeleteConfirmDialog.qml  ManualTuneDialog.qml  RecordFilenameDialog.qml  RenamePresetDialog.qml  ThemeNameDialog.qml
qml/pages/: EqualizerPage.qml  MinimalView.qml  NowPlayingView.qml  SettingsPage.qml
src/: AudioController.cpp  AudioController.h  CMakeLists.txt  ConfigStore.cpp  ConfigStore.h  EqController.cpp  EqController.h  PresetListModel.cpp  PresetListModel.h  RadioController.cpp  RadioController.h  RecordController.cpp  RecordController.h  ThemeController.cpp  ThemeController.h  main.cpp
