cmake_minimum_required(VERSION 3.16)
project(ncradio-gui LANGUAGES C CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)

find_package(PkgConfig REQUIRED)

# ─── Options (mirror /data/ncradio/configure) ────────────────────────────
option(NCRADIO_DISABLE_AUDIO "Build without audio support" OFF)
option(NCRADIO_DISABLE_PIPEWIRE "Prefer ALSA even if PipeWire is available" OFF)
option(NCRADIO_DISABLE_UDEV "Disable libudev; sysfs-only device autodetection" OFF)
option(NCRADIO_DISABLE_RECORD "Build without recording support" OFF)
option(NCRADIO_DISABLE_LAME "Build without MP3 recording support" OFF)
option(NCRADIO_DISABLE_VORBIS "Build without OGG Vorbis recording support" OFF)
option(NCRADIO_DISABLE_FLAC "Build without FLAC recording support" OFF)
option(NCRADIO_DISABLE_SAMPLERATE "Build without libsamplerate" OFF)
option(NCRADIO_DISABLE_EQ "Build without the 11-band equalizer" OFF)

set(BACKEND_SRCS backend/radio.c backend/rds.c backend/config.c)
set(BACKEND_DEFS "")
set(BACKEND_LIBS "")
set(BACKEND_INCLUDES "")

set(HAVE_AUDIO FALSE)
set(HAVE_PIPEWIRE FALSE)
set(HAVE_ALSA FALSE)
set(HAVE_UDEV FALSE)

# ─── PipeWire (preferred) ─────────────────────────────────────────────────
if(NOT NCRADIO_DISABLE_AUDIO AND NOT NCRADIO_DISABLE_PIPEWIRE)
  pkg_check_modules(PIPEWIRE QUIET IMPORTED_TARGET libpipewire-0.3)
  if(PIPEWIRE_FOUND)
    set(HAVE_PIPEWIRE TRUE)
    set(HAVE_AUDIO TRUE)
    message(STATUS "Audio backend: PipeWire ${PIPEWIRE_VERSION}")
  endif()
endif()

# ─── ALSA (fallback) ──────────────────────────────────────────────────────
if(NOT NCRADIO_DISABLE_AUDIO AND NOT HAVE_PIPEWIRE)
  pkg_check_modules(ALSA QUIET IMPORTED_TARGET alsa)
  if(ALSA_FOUND)
    set(HAVE_ALSA TRUE)
    set(HAVE_AUDIO TRUE)
    message(STATUS "Audio backend: ALSA ${ALSA_VERSION}")
  endif()
endif()

if(NOT HAVE_AUDIO)
  message(STATUS "Audio backend: disabled (no PipeWire or ALSA found)")
endif()

# ─── libudev ──────────────────────────────────────────────────────────────
if(HAVE_AUDIO AND NOT NCRADIO_DISABLE_UDEV)
  pkg_check_modules(UDEV QUIET IMPORTED_TARGET libudev)
  if(UDEV_FOUND)
    set(HAVE_UDEV TRUE)
    list(APPEND BACKEND_DEFS "HAVE_UDEV" "LIBUDEV_VERSION=\"${UDEV_VERSION}\"")
    list(APPEND BACKEND_LIBS PkgConfig::UDEV)
  endif()
endif()

if(HAVE_AUDIO)
  list(APPEND BACKEND_SRCS backend/audio.c)
  list(APPEND BACKEND_DEFS "HAVE_AUDIO")
  if(HAVE_PIPEWIRE)
    list(APPEND BACKEND_DEFS "HAVE_PIPEWIRE")
    list(APPEND BACKEND_LIBS PkgConfig::PIPEWIRE)
  else()
    list(APPEND BACKEND_LIBS asound)
  endif()
endif()

# ─── Recording formats ────────────────────────────────────────────────────
set(HAVE_RECORD FALSE)
if(HAVE_AUDIO AND NOT NCRADIO_DISABLE_RECORD)
  set(HAVE_RECORD TRUE)
  list(APPEND BACKEND_SRCS backend/record.c backend/record_wav.c)
  list(APPEND BACKEND_DEFS "HAVE_RECORD")

  if(NOT NCRADIO_DISABLE_LAME)
    find_library(LAME_LIB mp3lame)
    if(LAME_LIB)
      list(APPEND BACKEND_SRCS backend/record_mp3.c)
      list(APPEND BACKEND_DEFS "HAVE_LAME")
      list(APPEND BACKEND_LIBS ${LAME_LIB})
      message(STATUS "Recording format: MP3 (libmp3lame)")
    endif()
  endif()

  if(NOT NCRADIO_DISABLE_VORBIS)
    pkg_check_modules(VORBISENC QUIET IMPORTED_TARGET vorbisenc vorbis ogg)
    if(VORBISENC_FOUND)
      list(APPEND BACKEND_SRCS backend/record_ogg.c)
      list(APPEND BACKEND_DEFS "HAVE_VORBIS")
      list(APPEND BACKEND_LIBS PkgConfig::VORBISENC)
      message(STATUS "Recording format: OGG Vorbis")
    endif()
  endif()

  if(NOT NCRADIO_DISABLE_FLAC)
    pkg_check_modules(FLAC QUIET IMPORTED_TARGET flac)
    if(FLAC_FOUND)
      list(APPEND BACKEND_SRCS backend/record_flac.c)
      list(APPEND BACKEND_DEFS "HAVE_FLAC")
      list(APPEND BACKEND_LIBS PkgConfig::FLAC)
      message(STATUS "Recording format: FLAC")
    endif()
  endif()

  if(NOT NCRADIO_DISABLE_SAMPLERATE)
    pkg_check_modules(SAMPLERATE QUIET IMPORTED_TARGET samplerate)
    if(SAMPLERATE_FOUND)
      list(APPEND BACKEND_SRCS backend/resample.c)
      list(APPEND BACKEND_DEFS "HAVE_SAMPLERATE")
      list(APPEND BACKEND_LIBS PkgConfig::SAMPLERATE)
      message(STATUS "Resampling: libsamplerate")
    endif()
  endif()

  message(STATUS "Recording: enabled (WAV always available)")
else()
  message(STATUS "Recording: disabled")
endif()

# ─── Equalizer ────────────────────────────────────────────────────────────
set(HAVE_EQ FALSE)
if(NOT NCRADIO_DISABLE_EQ)
  set(HAVE_EQ TRUE)
  list(APPEND BACKEND_SRCS backend/eq.c)
  list(APPEND BACKEND_DEFS "HAVE_EQ")
  list(APPEND BACKEND_LIBS m)
  message(STATUS "Equalizer: enabled")
else()
  message(STATUS "Equalizer: disabled")
endif()

# ─── Backend static library ───────────────────────────────────────────────
add_library(ncradio-backend STATIC ${BACKEND_SRCS})
target_compile_definitions(ncradio-backend PUBLIC ${BACKEND_DEFS} _POSIX_C_SOURCE=200809L)
target_link_libraries(ncradio-backend PUBLIC ${BACKEND_LIBS} pthread)
target_include_directories(ncradio-backend PUBLIC ${CMAKE_SOURCE_DIR}/backend)

# ─── GUI frontend (added once the backend target is validated) ───────────
option(NCRADIO_BUILD_GUI "Build the Qt6/Kirigami frontend" ON)
if(NCRADIO_BUILD_GUI)
  add_subdirectory(src)
endif()
